--- a/ossfs/alpine/Dockerfile
+++ b/ossfs/alpine/Dockerfile
@@ -8,13 +8,16 @@ RUN apk --update add fuse alpine-sdk automake autoconf libxml2-dev fuse-dev curl
     make install
 
 FROM alpine:3
-RUN apk --update add fuse curl libxml2 openssl libstdc++ libgcc && rm -rf /var/cache/apk/* 
+COPY ./entrypoint.sh /entrypoint.sh
+RUN chmod a+x /entrypoint.sh && \
+    apk --update add fuse curl libxml2 openssl libstdc++ libgcc && \
+    rm -rf /var/cache/apk/*
 COPY --from=builder /usr/local/bin/ossfs /usr/local/bin/ossfs
 ENV BucketName=your-bucket-name
 ENV AccessKeyId=your-access-key-id
 ENV AccessKeySecret=your-access-key-secret
 ENV EndPoint=your-end-point
-ENV MountPoint=your-mount-dir
+ENV MountPoint=/mnt/ossfs
 COPY ./mount.sh /mount.sh
 
 ENTRYPOINT [ "/mount.sh" ]
