--- a/ossfs-webdav/Dockerfile
+++ b/ossfs-webdav/Dockerfile
@@ -7,7 +7,7 @@ RUN apk --update add fuse alpine-sdk automake autoconf libxml2-dev fuse-dev curl
     make && \
     make install
 
-FROM alpine:3
+FROM yindaheng98/webdav
 COPY ./entrypoint.sh /entrypoint.sh
 RUN chmod a+x /entrypoint.sh && \
     apk --update add fuse curl libxml2 openssl libstdc++ libgcc && \
@@ -22,4 +22,4 @@ ENV OWNER_USER=root
 ENV OWNER_GROUP=root
 
 ENTRYPOINT [ "/entrypoint.sh" ]
-CMD [ "ls", "${MountPoint}" ]
+CMD [ "httpd-foreground" ]
