--- a/v2subscribe/Dockerfile
+++ b/v2subscribe/Dockerfile
@@ -4,3 +4,6 @@ COPY --from=v2gen /bin/v2gen /bin/v2gen
 COPY subscribe.outbound.sh /bin/subscribe.outbound.sh
 COPY subscribe.balancer.sh /bin/subscribe.balancer.sh
 COPY templates /etc/v2ray/templates
+RUN apk add --no-cache expect
+ENV THREAD=16
+ENV COUNT=1
